--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Fedora Repository Abstraction Layer</display-name>
+  <display-name>Backbone Marionette with a Spring backend</display-name>
 
   <context-param>
     <param-name>webAppRootKey</param-name>
